--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
-								<div class="content color0 span-3-75">
+								<div class="content colorM1 span-3-75">
 									<h1 class="major">Diego Matias</h1>
 									<p>Brasileiro de Minas Gerais, desenvolvedor de jogos, aplicativos e sistemas.<br></p>
 									<ul class="actions">
@@ -37,7 +37,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
+								<div class="content  span-7">
 									<h2 class="major">Formação</h2>
 									<p>Graduado em tecnologia em Jogos Digitais pela PUC Minas - unidade São Gabriel em 2016. <br> no periodo que eu passei estudando o curso de Jogos na PUC Minas fiquei mais admirado pelo parte de programação do curso, e nesta parte que estou me focando mesmo depois de concluido o curso. <br><br> Algumas Materias Relevantes do curso na minha area:</p>
 									<ul>
@@ -48,8 +48,8 @@
 										<li>Inteligencia Artificial 1 e 2</li>
 									</ul>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+								<div class="image colorM2 filtered tinted" data-position="top left">
+									<!-- <img src="images/pic02.jpg" alt="" /> -->
 								</div>
 							</section>
 
@@ -105,11 +105,19 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Projetos</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Alguns dos projetos nos quais eu já trabalhei</p>
 								</div>
 								<div class="gallery">
+									<div class="modal" tabIndex="-1">
+										<div class="inner">
+											<img id="main" src="" />
+											<iframe width="420" height="315"
+											src="https://www.youtube.com/embed/XGSy3_Czz8k">
+										</iframe>
+										</div>
+									</div>
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="0" class="image filtered span-3" data-position="bottom"><img src="images/arena.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
@@ -440,6 +448,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/galery.js"></script>
 
 	</body>
 </html>
